# easyscript

./: .clang-format  .gitignore  README.md  build  build.bat  clean  clean.bat  configure  configure.bat  push  push.bat  run  run.bat
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cl_build/: CMakeLists.txt  build.bat  clean.bat  reconfig.bat  vcvars_call.bat
clang_build/: CMakeLists.txt  clean  reconfig  reconfig.bat
common/: build_common.bat  build_common.sh  clean_all.bat  clean_all.sh  clean_built.bat  clean_built.sh  copy_src.bat  copy_src.sh  reconfig_common.bat  reconfig_common.sh  run_common.bat  run_common.sh
common/license/: add_to_script.py  licensetools.py
docker/: docker-compose.yml  dockerfile
gcc_build/: CMakeLists.txt  build  build.bat  reconfig  reconfig.bat  run  run.bat
setting/: common_setting.bat  common_setting.sh  template.txt  unset_setting.sh  vs_setting.bat
src/: CMakeLists.txt  basic_tree.h  define_asm.asd  example_tree.h  httpc.cpp  httpc2.cpp  main.cpp  project_name.h  reader.h  reader_helper.h  samplecode.cpp  socket.cpp  socket.h  sockinterpreter.cpp  sockinterpreter.h  test.html
src/bunkai/: ast.h  ast_obj.h  base.h  eval.h  typeast.h
src/bunkai_src/: define_asm.asd  deftree.ast  select_test.hrd  test.hrd  test.txt  what.hrd
src/commonlib/: Ireader.h  argvlib.h  basic_helper.h  basic_tree.h  cmdline_ctx.h  constantlib.h  coutwrapper.h  example_tree.h  exprlib.h  extension_operator.h  extutil.h  fileio.h  json_util.cpp  json_util.h  learnstd.h  net_helper.h  number.h  project_name.h  reader.h  reader_helper.h  serializer.h  unicodedata.h  unicodeload.cpp  utf_helper.h  utfreader.h
src/commonlib/gerbage/: config.h
src/easyscript/: default_operator.cpp  default_operator.h  easytest.ess  easytest.inn  interpret.cpp  interpret.h  parse.cpp  parse.h  script.cpp  script.h  tree.cpp  tree.h
src/gerbage/: context.h  reader.hpp  typeutil.hpp
src/hardscript/: compile.cpp  compile.h  control.cpp  control.h  hardtest.cpp  hardtest.h  type_parse.cpp  type_parse.h
src/hardscript/codegen/: codegen.h  compile.cpp  compile.h
src/hardscript/parser/: control.cpp  control.h  eval.h  hard_tree.h  infodef.h  node.h  operators.h  print.cpp  type.h  type_parse.cpp  type_parse.h
src/httpc/: http1.cpp  http1.h  http2.cpp  http2.h  http2app.cpp  http2appctx.cpp  http2flowcontrol.cpp  http2frame.cpp  http2stream.cpp  http2stream_other.cpp  socket.cpp  socket.h  sockinterpreter.cpp  sockinterpreter.h
src/httpc/refactering/: httpc.cpp  httpc.h
src/module_test/: module_test.hpp
