#    Copyright (c) 2021 on-keyday
#    Released under the MIT license
#    https://opensource.org/licenses/mit-license.php
if(WIN32)
include_directories("D:\\OpenSSL\\build-x64-debug\\include")
link_directories("D:\\OpenSSL\\build-x64-debug\\lib")
else()
find_package(OPENSSL required)
endif()
include_directories("commonlib")
add_executable(httpc "httpc.cpp" )
file(GLOB EASY_H "easyscript/*.h")
file(GLOB EASY_CPP "easyscript/*.cpp")
#file(GLOB HARD_H "hardscript/*.h")
#file(GLOB HARD_SC "hardscript/*" "hardscript/*/*")

file(GLOB HTTPC "httpc/**")
add_library(netclient SHARED ${HTTPC} "httpc2.cpp")
target_link_libraries(httpc netclient)
add_library(easyscript SHARED ${EASY_CPP} ${EASY_H})
add_executable(program "main.cpp")
target_link_libraries(program easyscript)
if(WIN32)
target_link_libraries(netclient ws2_32 libcrypto libssl)
endif()